Programming languages and paradigms/Interpreter/examples/bad/non_bool_condition.ho
func main() {
    if 1 { // error:2:8: non-bool type int used as condition
        print("non bool condition");
    }
}